fix /ctf on mobile

--- a/static/css/ctf.css
+++ b/static/css/ctf.css
@@ -190,11 +190,12 @@ body {
   .discord {
     text-align: center;
     height: 100%;
-    width: 100vh;
+    width: 100%;
   }
 
-  body {
+  body, html {
     background-color: #212325;
+    width: 100%;
   }
 
   .iframes {
@@ -231,14 +232,12 @@ body {
   }
   
   .servertitle {
-    position: fixed; 
-    margin-left: 25%;
     padding-top: 2.5%;
     margin-bottom: 2.5%;
     text-align: center;
     padding: 2.5%;
     height: 100%;
-    width: 50%;
+    width: 100%;
     border-radius: 30px;
     background-color: #2e3137;
   }
